--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,8 @@
     "space-before-function-paren": 0,
 
     // allow specifying true explicitly for boolean props
-    "react/jsx-boolean-value": 0
+    "react/jsx-boolean-value": 0,
+    "react/prop-types": "off",
+    "react/forbid-prop-types": 0
   }
 }
