--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.9.0",
-    "axios": "^0.20.0"
+    "react": "^16.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
