Add className pass-thru
Add react 17 as peer dep

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.9.0",
+    "react": "^16.9.0 || ^17.0.0",
     "axios": "^0.20.0"
   },
   "devDependencies": {
