--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": "bubbaspaarx/react-cloudinary-upload-widget",
   "main": "dist/index.js",
-  "module": "dist/index.es.js",
+  "module": "dist/index.js",
   "jsnext:main": "dist/index.es.js",
   "engines": {
     "node": ">=8",
