--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "peerDependencies": {
     "axios": "^0.21.4",
-    "react": "^16.9.0"
+    "react": "^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -47,7 +47,6 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@rollup/plugin-babel": "^6.0.3",
-    "@testing-library/react-hooks": "^3.2.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
@@ -61,7 +60,6 @@
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^2.0.1",
     "react-scripts": "^3.4.0",
-    "react-test-renderer": "^16.9.0",
     "rollup": "^1.32.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -69,5 +67,9 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-url": "^2.1.0"
+  },
+  "dependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
+    "react-test-renderer": "^17.0.2"
   }
 }
